minor onef integration api fixes
